<resources>
    <string name="app_name">RegioBuy</string>
    <string name="title_activity_compan" translatable="false">RegioBuy</string>

    <string name="delivery_false">This company doesn\'t deliver!</string>
    <string name="delivery_true">This company delivers!</string>
    <string name="opening_times">Opening hours:</string>
    <string name="product_categories">Product groups:</string>
    <string name="organisations">Organizations:</string>
    <string name="closed">Closed!</string>
    <string name="not_available">Not available.</string>
    <string name="shop_types_without_colon">Shop types</string>
    <string name="shop_types">Shop types:</string>
    <string name="search_in">Search in:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="day">Day</string>
    <string name="is_opened">Is open</string>
    <string name="delivery">Delivery service</string>
    <string name="eggs">Eggs</string>
    <string name="meat">Meat</string>
    <string name="milk">Milk</string>
    <string name="honey">Honey</string>
    <string name="pasta">Pasta</string>
    <string name="fruits">Fruits</string>
    <string name="cereals">Cereals</string>
    <string name="beverages">Beverages</string>
    <string name="vegetables">Vegetables</string>
    <string name="baked_goods">Baked goods</string>
    <string name="meat_products">Meat products</string>
    <string name="milk_products">Milk products</string>
    <string name="hotel">Hotel</string>
    <string name="producer">Producer</string>
    <string name="shop">Shop</string>
    <string name="restaurant">Restaurant</string>
    <string name="mart">Mart</string>
    <string name="name_company">Name of company</string>
    <string name="description_products">Product description</string>
    <string name="opening_hours_comment">Opening hours comment</string>
    <string name="messages_company">Messages of company</string>
    <string name="name_owner">Name of owner</string>
    <string name="address">Address</string>
    <string name="description_company">Company description</string>
    <string name="product_tags">Product group tags</string>
    <string name="name_organisation">Name of organisations</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="weekday">Weekday</string>
    <string name="messages">Messages:</string>
    <string name="pictures">Pictures:</string>
    <string name="circum_search">Circum Search:</string>
    <string name="without_radius">Search without Radius</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_to_add">Tap to add new Post</string>
    <string name="filter_your_search">Filter Your Search</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="search_in_radius">Search In A Radius</string>
    <string name="hint_enter_new_post">Tap to enter a new product!</string>
    <string name="company_location">Company Location:</string>

    <string name="favorites">Favorites</string>
    <string name="my_location">My Location</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>