<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity">

    </fragment>

    <RelativeLayout
        android:id="@+id/search_open_view"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/map_search_view_backround"
        android:visibility="invisible"
        map:layout_constraintBottom_toBottomOf="@+id/map_filter_button"
        map:layout_constraintStart_toStartOf="@+id/map_search_button"
        map:layout_constraintTop_toTopOf="@+id/map_filter_button">

        <ImageButton
            android:id="@+id/close_search_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black"
            android:visibility="visible" />


        <EditText
            android:id="@+id/search_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/execute_search_button"
            android:layout_toEndOf="@id/close_search_button" />

        <ImageButton
            android:id="@+id/execute_search_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_send_24"
            android:tint="@color/black"
            android:visibility="visible" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/legend"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/map_search_view_backround"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            android:tint="@android:color/holo_red_dark"
            map:layout_constraintBottom_toBottomOf="@+id/textView25"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/my_location"
            android:textColor="@color/black"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/imageView16"
            map:layout_constraintStart_toStartOf="@+id/textView25"
            map:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/favorites"
            android:textColor="@color/black"
            map:layout_constraintEnd_toEndOf="@+id/textView24"
            map:layout_constraintStart_toStartOf="@+id/textView24"
            map:layout_constraintTop_toBottomOf="@+id/textView24" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView24"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView24" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView23"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView23" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView22"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView22" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView21"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hotel"
            android:textColor="@color/black"
            map:layout_constraintEnd_toEndOf="@+id/textView22"
            map:layout_constraintStart_toStartOf="@+id/textView22"
            map:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/restaurant"
            android:textColor="@color/black"
            map:layout_constraintEnd_toEndOf="@+id/textView21"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shop"
            android:textColor="@color/black"
            map:layout_constraintEnd_toEndOf="@+id/textView20"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/producer"
            android:textColor="@color/black"
            map:layout_constraintEnd_toStartOf="@+id/imageView6"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView20"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView20" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_24"
            map:layout_constraintBottom_toBottomOf="@+id/textView20"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mart"
            android:textColor="@color/black"
            map:layout_constraintEnd_toStartOf="@+id/imageView14"
            map:layout_constraintStart_toStartOf="@+id/textView23"
            map:layout_constraintTop_toBottomOf="@+id/textView23" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/map_filter_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/map_search_view_backround"
        android:src="@drawable/ic_baseline_filter_alt_24"
        android:tint="@color/black"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/map_search_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/map_search_view_backround"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_search_24"
        android:tint="@color/black"
        map:layout_constraintBottom_toBottomOf="@+id/map_filter_button"
        map:layout_constraintStart_toEndOf="@+id/map_filter_button"
        map:layout_constraintTop_toTopOf="@+id/map_filter_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
